[CHANGE] disenno de pagina [ADD] menu de pagina [FOLDER] se acomodan los jsp en folder

--- a/src/main/webapp/informes/informes.html
+++ b/src/main/webapp/informes/informes.html
@@ -36,8 +36,8 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="informes/descargarElementosJSP.jsp">Sistema de Informes</a>
+            <a href="index.html">Home</a>
+            <a class="active">Sistema de Informes</a>
             <a href="#contact">Incluir Data</a>
             <a href="#about">Modificar Data</a>
             <a href="#about">Borrar Data</a>
@@ -45,8 +45,8 @@
         </div>
 
         <div style="padding-left:16px">
-          <h2>Proyecto de Orientacion a Objetos</h2>
-          <p>Descripcion del proyecto.</p>
+          <h2>Bienvenidos al Sistema de Informes</h2>
+          <p> En esta seccion se podran consultar los informes pedidos en la descripcion del proyecto.</p>
         </div>
 
     </body>
