--- a/src/main/webapp/incluirData.html
+++ b/src/main/webapp/incluirData.html
@@ -36,9 +36,9 @@
     </head>
     <body>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="informes/descargarElementosJSP.jsp">Sistema de Informes</a>
-            <a href="#contact">Incluir Data</a>
+            <a href="#home">Home</a>
+            <a href="descargarElementosJSP.jsp">Sistema de Informes</a>
+            <a class="active" href="#contact">Incluir Data</a>
             <a href="#about">Modificar Data</a>
             <a href="#about">Borrar Data</a>
             
@@ -54,3 +54,4 @@
     
 
 </html>
+
