--- a/src/main/webapp/borrarDatos/menuBody.html
+++ b/src/main/webapp/borrarDatos/menuBody.html
@@ -10,11 +10,11 @@
         <li class="dropdown">
             <a href="javascript:void(0)" class="dropbtn" id="borrar">Borrar Data</a>
             <div class="dropdown-content">
-                <a href="../borrarDatos/deployClientes.jsp">Cliente</a>
-                <a href="../borrarDatos/deployMascotas.jsp">Mascota</a>
-                <a href="../borrarDatos/deployProductos.jsp">Producto</a>
-                <a href="../borrarDatos/deployServicios.jsp">Servicio</a>
-                <a href="../borrarDatos/deployVeterinarios.jsp">Veterinario</a>
+                <a href="seleccionCliente.jsp">Cliente</a>
+                <a href="seleccionMascota.jsp">Mascota</a>
+                <a href="seleccionProducto.jsp">Producto</a>
+                <a href="seleccionServicio.jsp">Servicio</a>
+                <a href="seleccionVeterinario.jsp">Veterinario</a>
             </div>
 
         </li>
