[ADD] front end de agregar datos.

--- a/src/main/webapp/menuStyle.html
+++ b/src/main/webapp/menuStyle.html
@@ -117,7 +117,12 @@
                   display: inline-block;
                   font-size: 16px;
               }
-              
+              .center {
+                margin: auto;
+                width: 60%;
+                border: 3px solid #73AD21;
+                padding: 10px;
+              }
         </style>
     </head>
 
